# memelab

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
contracts/: MemeDNARegistry.sol  hardhat.config.js  package-lock.json  package.json
contracts/scripts/: deploy.js  preflight.js
docker/: entrypoint.sh  nginx.conf.template
docs/: AI_PROMPTS.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  INGEST_SERVICE.md
frontend/: .env.local.example  README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: error.tsx  globals.css  page.tsx  (+3 more)
scripts/: TaskScheduler_IngestLatest.xml  TaskScheduler_Scheduler.xml  _backfill.err  _backfill_hist.err  _cluster_probe.py  _debug_deep_scan.py  _debug_find_token.py  _debug_lazy.py  _locks_probe.py  _runs_probe.py  _status.py  _unlock.py  api_demo.py  backfill_centers.py  backfill_fourmeme.py  backfill_holders.py  bootstrap_db.py  catch_latest.py  check_db.py  check_keys.py  check_volumes.py  demo_dry_run.py  diag.py  groq_smoke.py  ingest_latest.ps1  inspect_db.py  kill_locks.py  launch_local.ps1  merge_duplicate_families.py  preview.py  probe_fourmeme.py  probe_fourmeme_rpc.py  probe_rpc.py  progress.py  refresh_trades.py  reset_families.py  reset_run.py  run_ingest.py  run_pipeline.py  run_scheduler.ps1  (+1 more)
sql/: 001_init.sql  002_ai_transparency_and_cursor.sql
src/memedna/: __init__.py  bsc_web3.py  cache.py  config.py  db.py  main.py  models.py  schemas.py
tests/: test_clustering.py  test_schemas.py
(+89 files in other folders)
