[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memedna"
version = "0.1.0"
description = "MemeDNA decodes the origin, evolution, and dominance of meme tokens on BNB Chain."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "MemeDNA"}]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]
